--- a/package.json
+++ b/package.json
@@ -40,6 +40,18 @@
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.17",
 		"@thisux/sveltednd": "^0.0.20",
+		"@tiptap/core": "^3.13.0",
+		"@tiptap/extension-bold": "^3.13.0",
+		"@tiptap/extension-bubble-menu": "^3.13.0",
+		"@tiptap/extension-heading": "^3.13.0",
+		"@tiptap/extension-italic": "^3.13.0",
+		"@tiptap/extension-list": "^3.13.0",
+		"@tiptap/extension-placeholder": "^3.13.0",
+		"@tiptap/extension-subscript": "^3.13.0",
+		"@tiptap/extension-superscript": "^3.13.0",
+		"@tiptap/extension-underline": "^3.13.0",
+		"@tiptap/pm": "^3.13.0",
+		"@tiptap/starter-kit": "^3.13.0",
 		"@types/eslint": "^9.6.1",
 		"@types/iban": "^0.0.35",
 		"@types/lodash": "^4.17.21",
@@ -101,6 +113,7 @@
 		"svelte-french-toast": "^1.2.0",
 		"svelte-inspect-value": "^0.8.5",
 		"svelte-table": "^0.6.5",
+		"svelte-tiptap": "^3.0.1",
 		"sveltekit-breadcrumbs": "^0.0.3",
 		"sveltekit-search-params": "^3.0.0",
 		"sveltekit-superforms": "^2.28.1",
