--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"globals": "^15.15.0",
 		"graphql": "^16.12.0",
 		"graphql-yoga": "^5.17.1",
+		"hash-wasm": "^4.12.0",
 		"hotkeys-js": "^3.13.15",
 		"houdini": "^2.0.0-next.11",
 		"houdini-svelte": "^3.0.0-next.13",
