--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"concurrently": "^9.2.1",
 		"convert-iso-codes": "^1.0.10",
 		"cryptr": "^6.4.0",
+		"csv-parse": "^5.4.9",
 		"csv-stringify": "^6.6.0",
 		"daisyui": "^5.5.5",
 		"date-fns": "^4.1.0",
@@ -75,6 +76,7 @@
 		"jose": "^6.1.3",
 		"jsdom": "^27.2.0",
 		"lefthook": "^1.13.6",
+		"leaflet": "^1.9.4",
 		"lodash": "^4.17.21",
 		"marked": "^15.0.12",
 		"mermaid": "^11.12.2",
@@ -95,6 +97,8 @@
 		"prisma": "^6.19.0",
 		"prisma-generator-pothos-codegen": "^0.7.1",
 		"replace-special-characters": "^1.2.7",
+		"sveaflet": "^0.1.4",
+		"sveaflet-markercluster": "^0.0.3",
 		"svelte": "^5.45.5",
 		"svelte-check": "^4.3.4",
 		"svelte-french-toast": "^1.2.0",
