--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@tiptap/core": "^3.13.0",
 		"@tiptap/extension-bold": "^3.13.0",
 		"@tiptap/extension-bubble-menu": "^3.13.0",
+		"@tiptap/extension-drag-handle": "^3.13.0",
 		"@tiptap/extension-heading": "^3.13.0",
 		"@tiptap/extension-italic": "^3.13.0",
 		"@tiptap/extension-list": "^3.13.0",
@@ -84,6 +85,7 @@
 		"hotkeys-js": "^3.13.15",
 		"houdini": "^2.0.0-next.11",
 		"houdini-svelte": "^3.0.0-next.13",
+		"i18next-cli": "^1.32.0",
 		"iban": "^0.0.14",
 		"inquirer": "^12.11.1",
 		"jose": "^6.1.3",
@@ -119,6 +121,7 @@
 		"sveltekit-search-params": "^3.0.0",
 		"sveltekit-superforms": "^2.28.1",
 		"tailwindcss": "^4.1.17",
+		"translation-check": "^1.1.1",
 		"tsup": "^8.5.1",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.48.1",
