--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@faker-js/faker": "^9.9.0",
 		"@inlang/cli": "^3.0.12",
 		"@inlang/paraglide-js": "2.3.2",
+		"@lingual/i18n-check": "^0.8.14",
 		"@magidoc/plugin-svelte-marked": "^6.3.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
 		"@opentelemetry/instrumentation": "^0.57.2",
@@ -39,6 +40,19 @@
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.17",
 		"@thisux/sveltednd": "^0.0.20",
+		"@tiptap/core": "^3.13.0",
+		"@tiptap/extension-bold": "^3.13.0",
+		"@tiptap/extension-bubble-menu": "^3.13.0",
+		"@tiptap/extension-drag-handle": "^3.13.0",
+		"@tiptap/extension-heading": "^3.13.0",
+		"@tiptap/extension-italic": "^3.13.0",
+		"@tiptap/extension-list": "^3.13.0",
+		"@tiptap/extension-placeholder": "^3.13.0",
+		"@tiptap/extension-subscript": "^3.13.0",
+		"@tiptap/extension-superscript": "^3.13.0",
+		"@tiptap/extension-underline": "^3.13.0",
+		"@tiptap/pm": "^3.13.0",
+		"@tiptap/starter-kit": "^3.13.0",
 		"@types/eslint": "^9.6.1",
 		"@types/iban": "^0.0.35",
 		"@types/lodash": "^4.17.21",
@@ -68,9 +82,11 @@
 		"globals": "^15.15.0",
 		"graphql": "^16.12.0",
 		"graphql-yoga": "^5.17.1",
+		"hash-wasm": "^4.12.0",
 		"hotkeys-js": "^3.13.15",
 		"houdini": "^2.0.0-next.11",
 		"houdini-svelte": "^3.0.0-next.13",
+		"i18next-cli": "^1.32.0",
 		"iban": "^0.0.14",
 		"inquirer": "^12.11.1",
 		"jose": "^6.1.3",
@@ -104,10 +120,12 @@
 		"svelte-french-toast": "^1.2.0",
 		"svelte-inspect-value": "^0.8.5",
 		"svelte-table": "^0.6.5",
+		"svelte-tiptap": "^3.0.1",
 		"sveltekit-breadcrumbs": "^0.0.3",
 		"sveltekit-search-params": "^3.0.0",
 		"sveltekit-superforms": "^2.28.1",
 		"tailwindcss": "^4.1.17",
+		"translation-check": "^1.1.1",
 		"tsup": "^8.5.1",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.48.1",
@@ -138,7 +156,9 @@
 		"format": "prettier --write .",
 		"install-git-hooks": "bunx lefthook install",
 		"lint": "prettier --check . && eslint .",
-		"machine-translate": "inlang machine translate --project project.inlang",
+		"i18n:check": "i18n-check --source \"de\" --locales ./messages --format \"i18next\"",
+		"i18n:validate": "inlang validate --project project.inlang",
+		"i18n:translate": "inlang machine translate --project project.inlang",
 		"preview": "vite preview",
 		"studio": "prisma studio",
 		"typecheck": "tsc --noEmit",
