--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@pothos/tracing-opentelemetry": "^1.1.3",
 		"@prisma/client": "^6.19.0",
 		"@prisma/instrumentation": "^6.19.0",
+		"@pdf-lib/fontkit": "^1.1.1",
 		"@slack/webhook": "^7.0.6",
 		"@svelte-plugins/datepicker": "^1.0.11",
 		"@svelte-put/qr": "^2.1.1",
