--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@opentelemetry/instrumentation-http": "^0.57.2",
 		"@opentelemetry/sdk-trace-node": "^1.30.1",
 		"@opentelemetry/semantic-conventions": "^1.38.0",
+		"@pdf-lib/fontkit": "^1.1.1",
 		"@pothos/core": "^4.10.0",
 		"@pothos/plugin-complexity": "^4.1.2",
 		"@pothos/plugin-prisma": "^4.13.0",
@@ -31,7 +32,6 @@
 		"@pothos/tracing-opentelemetry": "^1.1.3",
 		"@prisma/client": "^6.19.0",
 		"@prisma/instrumentation": "^6.19.0",
-		"@pdf-lib/fontkit": "^1.1.1",
 		"@slack/webhook": "^7.0.6",
 		"@svelte-plugins/datepicker": "^1.0.11",
 		"@svelte-put/qr": "^2.1.1",
@@ -92,8 +92,8 @@
 		"inquirer": "^12.11.1",
 		"jose": "^6.1.3",
 		"jsdom": "^27.2.0",
-		"lefthook": "^1.13.6",
 		"leaflet": "^1.9.4",
+		"lefthook": "^1.13.6",
 		"lodash": "^4.17.21",
 		"marked": "^15.0.12",
 		"mermaid": "^11.12.2",
@@ -120,6 +120,7 @@
 		"svelte-check": "^4.3.4",
 		"svelte-french-toast": "^1.2.0",
 		"svelte-inspect-value": "^0.8.5",
+		"svelte-persisted-store": "^0.12.0",
 		"svelte-table": "^0.6.5",
 		"svelte-tiptap": "^3.0.1",
 		"sveltekit-breadcrumbs": "^0.0.3",
