--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
 		"commander": "^14.0.2",
 		"diff-match-patch": "^1.0.5",
 		"humanparser": "^2.7.0",
-		"preact": "^10.28.2",
 		"prettier-plugin-sort-json": "^4.1.1",
 		"svelte-kit": "^1.2.0"
 	},
@@ -148,6 +147,7 @@
 	"resolutions": {
 		"devalue": "5.3.2",
 		"form-data": "4.0.4",
+		"preact": "10.28.2",
 		"svelte": "5.45.5"
 	},
 	"scripts": {
