--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
 		"humanparser": "^2.7.0",
 		"nodemailer": "^6.9.16",
 		"prettier-plugin-sort-json": "^4.1.1",
-		"svelte-email": "^1.0.1",
 		"svelte-kit": "^1.2.0"
 	},
 	"devDependencies": {
-		"@types/nodemailer": "^6.4.17",
 		"@bwip-js/browser": "^4.8.0",
 		"@casl/ability": "^6.7.3",
 		"@casl/prisma": "^1.5.2",
@@ -65,10 +63,12 @@
 		"@types/marked": "^6.0.0",
 		"@types/node-forge": "^1.3.14",
 		"@types/node-schedule": "^2.1.8",
+		"@types/nodemailer": "^6.4.17",
 		"@vitest/coverage-v8": "^4.0.15",
 		"@weblogin/trendchart-elements": "^2.0.1",
 		"@zerodevx/svelte-toast": "^0.9.6",
 		"barcode-detector": "^3.0.8",
+		"better-svelte-email": "^1.3.1",
 		"c8": "^10.1.3",
 		"caniuse-lite": "^1.0.30001759",
 		"codenamize-ts": "1.0.2",
