--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"dependencies": {
 		"diff-match-patch": "^1.0.5",
 		"humanparser": "^2.7.0",
-		"nodemailer": "^6.9.16"
+		"nodemailer": "^6.9.16",
+		"commander": "^14.0.2"
 	},
 	"devDependencies": {
 		"@bwip-js/browser": "^4.8.0",
@@ -43,9 +44,9 @@
 		"@tiptap/core": "^3.13.0",
 		"@tiptap/extension-bold": "^3.13.0",
 		"@tiptap/extension-bubble-menu": "^3.13.0",
-		"@tiptap/extension-character-count": "^3.15.3",
+		"@tiptap/extension-character-count": "^3.13.3",
 		"@tiptap/extension-drag-handle": "^3.13.0",
-		"@tiptap/extension-hard-break": "^3.15.3",
+		"@tiptap/extension-hard-break": "^3.13.3",
 		"@tiptap/extension-heading": "^3.13.0",
 		"@tiptap/extension-italic": "^3.13.0",
 		"@tiptap/extension-list": "^3.13.0",
@@ -71,7 +72,6 @@
 		"c8": "^10.1.3",
 		"caniuse-lite": "^1.0.30001759",
 		"codenamize-ts": "1.0.2",
-		"commander": "^14.0.2",
 		"concurrently": "^9.2.1",
 		"convert-iso-codes": "^1.0.10",
 		"cryptr": "^6.4.0",
