Integrate Sentry (Bugsink) for error tracking
Add self-hosted Bugsink service to the development Docker compose and wire the @sentry/sveltekit SDK into both server and client SvelteKit hooks. Update vite config to include the Sentry plugin (disable source map upload), and add optional SENTRY_DSN and PUBLIC_SENTRY_DSN env schema entries plus example .env comments. This enables local error collection in Bugsink for development while disabling tracing and source map uploads due to Bugsink limitations.

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,8 @@ SMTP_PASSWORD=
 SMTP_FROM_ADDRESS=noreply@munify.cloud
 SMTP_FROM_NAME=MUNIFY Delegator
 
+# Sentry/Bugsink Error Tracking
+# For local development, Bugsink runs on localhost:8000
+# Create a project in Bugsink (http://localhost:8000) and copy the DSN here
+# PUBLIC_SENTRY_DSN=http://<key>@localhost:8000/1
+# SENTRY_DSN=http://<key>@localhost:8000/1
