--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,6 @@ SMTP_FROM_NAME=MUNIFY Delegator
 # Create a project in Bugsink (http://localhost:8000) and copy the DSN here
 # PUBLIC_SENTRY_DSN=http://<key>@localhost:8000/1
 # SENTRY_DSN=http://<key>@localhost:8000/1
+# Set to 'true' to include PII (user IPs, etc.) in error reports (default: false)
+# PUBLIC_SENTRY_SEND_DEFAULT_PII=false
+# SENTRY_SEND_DEFAULT_PII=false
