--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,11 @@ SMTP_PASSWORD=
 SMTP_FROM_ADDRESS=noreply@munify.cloud
 SMTP_FROM_NAME=MUNIFY Delegator
 
+# Sentry/Bugsink Error Tracking
+# For local development, Bugsink runs on localhost:8000
+# Create a project in Bugsink (http://localhost:8000) and copy the DSN here
+# PUBLIC_SENTRY_DSN=http://<key>@localhost:8000/1
+# SENTRY_DSN=http://<key>@localhost:8000/1
+# Set to 'true' to include PII (user IPs, etc.) in error reports (default: false)
+# PUBLIC_SENTRY_SEND_DEFAULT_PII=false
+# SENTRY_SEND_DEFAULT_PII=false
