--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@pothos/tracing-opentelemetry": "^1.1.3",
 		"@prisma/client": "^6.19.0",
 		"@prisma/instrumentation": "^6.19.0",
+		"@sentry/cli": "^3.1.0",
 		"@sentry/sveltekit": "^10.34.0",
 		"@slack/webhook": "^7.0.6",
 		"@svelte-plugins/datepicker": "^1.0.11",
