--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -104,7 +104,7 @@ jobs:
           scanners: ${{ github.event_name == 'pull_request' && 'vuln' || 'vuln,secret,misconfig'}}
 
       - name: Upload sourcemaps to Bugsink
-        if: github.event_name != 'pull_request' && env.SENTRY_AUTH_TOKEN != '' && env.SENTRY_URL != ''
+        if: github.event_name != 'pull_request' && secrets.SENTRY_AUTH_TOKEN != '' && secrets.SENTRY_URL != ''
         env:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
           SENTRY_URL: ${{ secrets.SENTRY_URL }}
@@ -137,10 +137,7 @@ jobs:
           echo "::endgroup::"
 
       - name: Sourcemap upload skipped
-        if: github.event_name != 'pull_request' && (env.SENTRY_AUTH_TOKEN == '' || env.SENTRY_URL == '')
-        env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-          SENTRY_URL: ${{ secrets.SENTRY_URL }}
+        if: github.event_name != 'pull_request' && (secrets.SENTRY_AUTH_TOKEN == '' || secrets.SENTRY_URL == '')
         run: |
           echo "::warning::Sourcemap upload skipped - SENTRY_AUTH_TOKEN or SENTRY_URL not configured"
           echo "To enable sourcemap uploads, add the following secrets to your repository:"
