Use env instead of secrets in workflow conditions
Fix GitHub Actions workflow evaluation errors by exposing Sentry secrets as environment variables and updating conditional checks to reference env.SENTRY_AUTH_TOKEN and env.SENTRY_URL. The workflow previously used secrets.* directly inside expressions, which is not a recognized named value in those conditions and caused an invalid workflow error.

Changes:
- Set env.SENTRY_AUTH_TOKEN and env.SENTRY_URL at the job level.
- Update if: conditions to check env.SENTRY_AUTH_TOKEN and env.SENTRY_URL instead of secrets.*.
- Remove redundant env assignments under the sourcemap upload step to rely on the job-level env.

This ensures the conditional logic can evaluate the presence of Sentry credentials and avoids the workflow validation error.

--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -14,6 +14,9 @@ jobs:
   build:
     name: Build and publish container images
     runs-on: ubuntu-latest
+    env:
+      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+      SENTRY_URL: ${{ secrets.SENTRY_URL }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -104,10 +107,8 @@ jobs:
           scanners: ${{ github.event_name == 'pull_request' && 'vuln' || 'vuln,secret,misconfig'}}
 
       - name: Upload sourcemaps to Bugsink
-        if: github.event_name != 'pull_request' && secrets.SENTRY_AUTH_TOKEN != '' && secrets.SENTRY_URL != ''
+        if: github.event_name != 'pull_request' && env.SENTRY_AUTH_TOKEN != '' && env.SENTRY_URL != ''
         env:
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-          SENTRY_URL: ${{ secrets.SENTRY_URL }}
           SENTRY_PROJECT: ${{ vars.SENTRY_PROJECT || 'delegator' }}
         run: |
           echo "::group::Extracting build artifacts from Docker image"
@@ -137,7 +138,7 @@ jobs:
           echo "::endgroup::"
 
       - name: Sourcemap upload skipped
-        if: github.event_name != 'pull_request' && (secrets.SENTRY_AUTH_TOKEN == '' || secrets.SENTRY_URL == '')
+        if: github.event_name != 'pull_request' && (env.SENTRY_AUTH_TOKEN == '' || env.SENTRY_URL == '')
         run: |
           echo "::warning::Sourcemap upload skipped - SENTRY_AUTH_TOKEN or SENTRY_URL not configured"
           echo "To enable sourcemap uploads, add the following secrets to your repository:"
