--- a/package.json
+++ b/package.json
@@ -164,7 +164,10 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"dev": "concurrently \"bun run dev:server\" \"bun run dev:docker\"",
-		"dev:docker": "docker compose -f ./dev.docker-compose.yml up",
+		"dev:docker": "docker compose -f ./dev.docker-compose.yml --profile core up",
+		"dev:docker:listmonk": "docker compose -f ./dev.docker-compose.yml --profile core --profile listmonk up",
+		"dev:docker:observability": "docker compose -f ./dev.docker-compose.yml --profile core --profile observability up",
+		"dev:docker:full": "docker compose -f ./dev.docker-compose.yml --profile core --profile listmonk --profile observability up",
 		"dev:server": "while true; do svelte-kit sync && vite; echo '🔄 Server crashed, restarting...'; sleep 1; done",
 		"format": "prettier --write .",
 		"install-git-hooks": "bunx lefthook install",
