Migrate to svelte-sonner for toasts
Replace svelte-french-toast with svelte-sonner across the app to use a more actively maintained, Svelte 5–native toast library. Updated imports in layout and client, adjusted the Toaster component usage to enable richColors, closeButton, and bottom-right positioning, and removed obsolete CSS overrides for the old toaster implementation. This centralizes toast behavior and ensures compatibility with the new library's API while simplifying styling.
Remove dismiss button from toasts and related CSS

Revert the previous attempt that made no functional change and instead remove the dismiss (close) button from Sonner toasts by deleting the closeButton prop from the Toaster and removing the associated CSS that positioned the close button. This simplifies the UI by hiding the unnecessary dismiss control for now and eliminates unused styling rules.
Position sonner close button top-right outside container

Place the svelte-sonner toast close button at the top-right corner, partly outside the toast container so it sits half outside the component. This adds relative positioning to the toast container and absolute positioning with negative offsets, sizing, border, background, and resets left/transform so the button appears consistently in the desired spot.
Keep general toasts top-center, send uncaught GraphQL/Prisma errors to bottom-right

Adjust toast positions so that the global Toaster remains at the top-center for normal notifications, while explicit uncaught GraphQL/Prisma error toasts are shown at the bottom-right. This change ensures regular messages keep the desired top-center placement, but serious uncaught backend errors are more noticeable in the bottom-right corner.

--- a/package.json
+++ b/package.json
@@ -128,9 +128,9 @@
 		"sveaflet-markercluster": "^0.0.3",
 		"svelte": "^5.45.5",
 		"svelte-check": "^4.3.4",
-		"svelte-french-toast": "^1.2.0",
 		"svelte-inspect-value": "^0.8.5",
 		"svelte-persisted-store": "^0.12.0",
+		"svelte-sonner": "^1.0.7",
 		"svelte-table": "^0.6.5",
 		"svelte-tiptap": "^3.0.1",
 		"sveltekit-breadcrumbs": "^0.0.3",
