Add badge generator button to UserDrawer
Add optional PUBLIC_BADGE_GENERATOR_URL config and a "Generate Badge" action in the UserDrawer so admins can open the external badge generator with participant data pre-filled. This includes updating the public config schema, documenting the env var in .env.example, extending the GraphQL query to fetch assigned committee and nation alpha2Code, adding i18n strings (en/de), and wiring a conditional button that builds the badge URL with name, country, committee, pronouns, id, and media consent parameters.

--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,6 @@ SMTP_FROM_NAME=MUNIFY Delegator
 # Set to 'true' to include PII (user IPs, etc.) in error reports (default: false)
 # PUBLIC_SENTRY_SEND_DEFAULT_PII=false
 # SENTRY_SEND_DEFAULT_PII=false
+
+# Badge Generator URL (optional)
+# PUBLIC_BADGE_GENERATOR_URL=https://badges.example.com
