Bridge DELEGATOR to standalone resolution-editor library
Introduce a wrapper and i18n adapter so DELEGATOR can start using the
new @deutschemodelunitednations/munify-resolution-editor package while
keeping backward compatibility. This adds a
ResolutionEditorWrapper.svelte that syncs the library component with
DELEGATOR's store, maps Paraglide messages to the library's label shape,
and wires in bundled German phrase lists. It also updates the component
index to export the wrapper and re-export types/utilities from the
library, and marks the local schemata file as deprecated to guide
migration.

- Add ResolutionEditorWrapper.svelte to bridge library props/events with
resolutionContentStore, handle copy notifications, and provide
extension-point snippets.
- Add resolution-editor-i18n adapter to convert Paraglide messages into
ResolutionEditorLabels and provide helpers for interpolated labels.
- Update Resolution component index to export the wrapper, re-export
library types/utilities, and keep legacy exports for gradual migration.
- Annotate local schemata/resolution.ts as deprecated to encourage using
library imports and ease transition.

These changes are needed to migrate DELEGATOR incrementally to the new
standalone resolution-editor package without breaking existing code or
losing localized messages and store integration.
✨ feat(resolution): remove OperativeClauseEditor component

Remove the entire OperativeClauseEditor.svelte component and its
associated editor logic. The deleted file contained the UI and
state-management for operative clause editing: text/subclause block
handling, block addition/deletion, subclause management, suggestion
logic, keyboard and focus handlers, and integration with phrase
patterns.

This cleans up unused/duplicated editor code and eliminates an old,
monolithic component in favor of newer, consolidated editors elsewhere
in the codebase (or to prepare for a refactor). The change reduces
maintenance surface and avoids keeping stale sugg

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@casl/ability": "^6.7.3",
 		"@casl/prisma": "^1.5.2",
 		"@deutschemodelunitednations/corporate-identity": "^1.1.10",
+		"@deutschemodelunitednations/munify-resolution-editor": "^0.1.1",
 		"@dipser/epc-qr-code.js": "^1.0.3",
 		"@eslint/compat": "^1.4.1",
 		"@faker-js/faker": "^9.9.0",
